[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libtmjax"
version = "0.0.1"
authors = [

  { name="J.T. Hartzfeld", email="johnathan.t.hartzfeld@gmail.com" },

]
description = "A library for loading, manipulating, and saving tilemaps in .tmx and .tmj formats."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
	"auto_all >= 1.4.1", 
	"platformdirs >= 4.2.0", 
	"pygame>=2.5.2",
	"gptk>=0.2.12"]
classifiers = ["Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JTHartzfeld/libtmjax"
"Bug Tracker" = "https://github.com/JTHartzfeld/libtmjax/issues"
